# bitboards-chess-engine-cpp

./: .gitignore  CMakeLists.txt  README.md  attacks.cpp  attacks.h  board.cpp  board.h  constants.cpp  constants.h  enums.h  main.cpp  moves.cpp  moves.h  perft.h  utility.h  visualisation.cpp  visualisation.h
_materials_/: tmp.md
_materials_/img/: bitboards_explain_imgs.xcf  magic_bitboards.pptx
chess_bot/: CMakeLists.txt
chess_bot/include/: chess_bot.hpp  constants.hpp  pieces_weights.hpp
chess_bot/src/: chess_bot.cpp  main.cpp
engine/: CMakeLists.txt
engine/include/: attacks.h  attacks.hpp  board.h  board.hpp  constants.hpp  moves.hpp  perft.hpp
engine/src/: attacks.cpp  board.cpp  constants.cpp  main.cpp  moves.cpp  perft.cpp  visualisation.cpp
gui/: CMakeLists.txt
gui/src/: main.cpp  main_main_main.cpp
sandbox_tests/: test_arr_vs_umap.cpp
